--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@ background-color: #17202a
     <div align="Center">
     <h1>Drop Pro</h1>
       <div class="card border-primary mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header"> Drop Pro Btc </div>
   <div class="card-body text-primary">
-    <h5 class="card-title">Primary card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <h5 class="card-title">Soon</h5>
+    <p class="card-text"> Send 1 BTC EVM and receive 1.5 apBTC </p>
   </div>
 </div>
 <div class="card border-secondary mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Drop Pro Eth</div>
   <div class="card-body text-secondary">
-    <h5 class="card-title">Secondary card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <h5 class="card-title"></h5>
+    <p class="card-text">Send 3 ETH EVM and receive 1 apBTC.</p>
   </div>
 </div>
 <div class="card border-success mb-3" style="max-width: 18rem;">
-  <div class="card-header">Header</div>
+  <div class="card-header">Drop Pro BNB</div>
   <div class="card-body text-success">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <h5 class="card-title">Soon</h5>
+    <p class="card-text"> Send 10 BNB EVM and receive 1 apBTC.</p>
   </div>
 </div>
 <div class="card border-danger mb-3" style="max-width: 18rem;">
