--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ background-color: #17202a
     <h1>Drop Pro</h1>
       </font>
       <div class="card border-primary mb-3" style="max-width: 18rem;">
-  <div class="card-header"> Drop Pro Btc </div>
+  <div class="card-header bg-transparent border-success"> Drop Pro Btc </div>
   <div class="card-body text-primary">
     <h5 class="card-title">Soon</h5>
     <p class="card-text"> Send 1 BTC EVM and receive 1.5 apBTC </p>
