--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ background-color: #17202a
 </div>
       
 <div class="card border-success mb-3" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-success">Header</div>
-  <div class="card-body text-success">
+  <div class="card-header bg-transparent border-warning">Header</div>
+  <div class="card-body text-success text-bg-dark">
     <h5 class="card-title">Success card title</h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
   </div>
