--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ background-color: #17202a
 </div>
       
 <div class="card border-success mb-3" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-warning">Header</div>
+  <div class="card-header bg-transparent border-warning text-warning text-bg-dark">DROP PRO BTC</div>
   <div class="card-body text-success text-bg-dark">
-    <h5 class="card-title">Success card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+    <h5 class="card-title">SOIN</h5>
+    <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
   </div>
   <button type="button" class="btn btn-outline-warning">Warning</button>
 </div>
