--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ background-color: #17202a
   </div>
 </div>
       
-<div class="card border-success mb-3" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-warning text-warning text-bg-dark">DROP PRO BTC</div>
+<div class="card border-success mb-3 text-bg-dark" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-warning text-warning">DROP PRO BTC</div>
   <div class="card-body text-success text-bg-dark">
     <h5 class="card-title">SOIN</h5>
     <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
