--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ background-color: #17202a
     <h5 class="card-title">SOIN</h5>
     <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
   </div>
-  <button type="button" class="btn btn-outline-warning">Warning</button>
+  <button type="button" class="btn btn-outline-warning">Let's go THERE</button>
 </div>
 
 <div class="card border-warning mb-3 text-bg-dark" style="max-width: 18rem;">
@@ -32,7 +32,7 @@ background-color: #17202a
     <h5 class="card-title">SOIN</h5>
     <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
   </div>
-  <button type="button" class="btn btn-outline-warning">Warning</button>
+  <button type="button" class="btn btn-outline-warning">Let's go THERE</button>
 </div>
     </div>
 
