--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ background-color: #17202a
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
 
-      <div class="card border-secondary mb-3 text-bg-dark" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-secondary text-secondary">DROP PRO BTC</div>
-  <div class="card-body text-secondary text-bg-dark">
-    <h5 class="card-title">SOIN</h5>
-    <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
+      <div class="card border-light mb-3 text-bg-dark" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-light text-light">DROP PRO HBAR</div>
+  <div class="card-body text-light text-bg-dark">
+    <h5 class="card-title">SOON</h5>
+    <p class="card-text">Send 10.000 HBAR EVM and receive 1 apBTC./p>
   </div>
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
