--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ background-color: #17202a
   <div class="card-header bg-transparent border-warning text-warning">DROP PRO BTC</div>
   <div class="card-body text-warning text-bg-dark">
     <h5 class="card-title">SOON</h5>
-    <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC./p>
+    <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-warning">Let's go THERE</button>
 </div>
@@ -30,7 +30,7 @@ background-color: #17202a
   <div class="card-header bg-transparent border-secondary text-secondary">DROP PRO ETH</div>
   <div class="card-body text-secondary text-bg-dark">
     <h5 class="card-title">AIRDROP ETHEREUM ETH</h5>
-    <p class="card-text">Send 3 ETH EVM and receive 1 apBTC./p>
+    <p class="card-text">Send 3 ETH EVM and receive 1 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
@@ -39,7 +39,7 @@ background-color: #17202a
   <div class="card-header bg-transparent border-danger text-danger">DROP PRO TRX</div>
   <div class="card-body text-danger text-bg-dark">
     <h5 class="card-title">SOON</h5>
-    <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC./p>
+    <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
@@ -48,7 +48,7 @@ background-color: #17202a
   <div class="card-header bg-transparent border-light text-light">DROP PRO HBAR</div>
   <div class="card-body text-light text-bg-dark">
     <h5 class="card-title">SOON</h5>
-    <p class="card-text">Send 10.000 HBAR EVM and receive 1 apBTC./p>
+    <p class="card-text">Send 10.000 HBAR EVM and receive 1 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
