--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@ background-color: #17202a
     <div align="Center">
       
       <font color="f39c12">
-    <h1>Drop Pro</h1>
+    <h1>Drop Pro</h1>  
+        <br />
+        We support Crypto scalability
       </font>
       
 <div class="card border-warning mb-3 text-bg-dark" style="max-width: 18rem;">
