--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ background-color: #17202a
     <h5 class="card-title">SOON</h5>
     <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC.</p>
   </div>
-  <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
+  <button type="button" class="btn btn-outline-danger">Let's go THERE</button>
 </div>
 
       <div class="card border-light mb-3 text-bg-dark" style="max-width: 18rem;">
@@ -52,7 +52,7 @@ background-color: #17202a
     <h5 class="card-title">SOON</h5>
     <p class="card-text">Send 10.000 HBAR EVM and receive 1 apBTC.</p>
   </div>
-  <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
+  <button type="button" class="btn btn-outline-light">Let's go THERE</button>
 </div>
       
       
