--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ background-color: #17202a
   "locale": "en",
   "largeChartUrl": "",
   "isTransparent": false,
-  "showSymbolLogo": true,
+  "showSymbolLogo": false,
   "displayMode": "adaptive"
 }
   </script>
