--- a/index.html
+++ b/index.html
@@ -60,48 +60,29 @@ background-color: #17202a
     </div>
 
     <div align="center">
-      <!-- TradingView Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.#.com/" rel="noopener nofollow" target="_blank"><span class="blue-text">HELLO</span></a></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
-  {
-  "symbols": [
-    {
-      "proName": "FOREXCOM:SPXUSD",
-      "title": "S&P 500 Index"
-    },
-    {
-      "proName": "FOREXCOM:NSXUSD",
-      "title": "US 100 Cash CFD"
-    },
-    {
-      "proName": "FX_IDC:EURUSD",
-      "title": "EUR to USD"
-    },
-    {
-      "proName": "BITSTAMP:BTCUSD",
-      "title": "Bitcoin"
-    },
-    {
-      "proName": "BITSTAMP:ETHUSD",
-      "title": "Ethereum"
-    },
-    {
-      "proName": "CRYPTO:SOLUSD",
-      "title": "Sol "
-    }
-  ],
-  "colorTheme": "dark",
-  "locale": "en",
-  "largeChartUrl": "",
-  "isTransparent": false,
-  "showSymbolLogo": false,
-  "displayMode": "adaptive"
-}
-  </script>
-</div>
-<!-- TradingView Widget END -->
+      <!-- Crypto Converter ⚡ Widget --><crypto-converter-widget
+  amount="1"
+  shadow="true"
+  symbol="false"
+  locale="en"
+  rounded="true"
+  quote="USD"
+  base="BTC"
+  theme="auto"
+  decimal="4"
+  stat="false"
+  tax="0"
+  background-color="#8E2DE2"
+  background="linear-gradient(45deg, #8E2DE2, #4A00E0)"
+></crypto-converter-widget
+><a href="https://currencyrate.today/" target="_blank" rel="noopener"
+  >CurrencyRate.Today</a
+>
+<script
+  async
+  src="https://cdn.jsdelivr.net/gh/dejurin/crypto-converter-widget@latest/dist/latest.min.js"
+></script>
+<!-- /Crypto Converter ⚡ Widget -->
     </div>
       
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
