--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@ background-color: #17202a
   background-color="#8E2DE2"
   background="linear-gradient(45deg, #8E2DE2, #4A00E0)"
 ></crypto-converter-widget
-><a href="https://currencyrate.today/" target="_blank" rel="noopener"
-  >CurrencyRate.Today</a
+><a href="https://#" target="_blank" rel="noopener"
+  >Currency moon</a
 >
 <script
   async
