--- a/index.html
+++ b/index.html
@@ -74,14 +74,8 @@ background-color: #17202a
   tax="0"
   background-color="#8E2DE2"
   background="linear-gradient(45deg, #8E2DE2, #4A00E0)"
-></crypto-converter-widget
-><a href="https://#" target="_blank" rel="noopener"
-  >Currency moon</a
->
-<script
-  async
-  src="https://cdn.jsdelivr.net/gh/dejurin/crypto-converter-widget@latest/dist/latest.min.js"
-></script>
+></crypto-converter-widget>
+      <a href="https://#" target="_blank" rel="noopener">Currency moon</a>
 <!-- /Crypto Converter ⚡ Widget -->
     </div>
       
