--- a/index.html
+++ b/index.html
@@ -60,17 +60,11 @@ background-color: #17202a
     </div>
 
     <div align="center">
-<!-- Modal -->
-<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="staticBackdropLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
+    <h3>
+      <font color="#5dade2">
+        <a href="">We scale your Crypto, write to us</a>
+      </font>
+    </h3>
 
     </div>
       
