--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ background-color: #17202a
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
 
-   <div class="card border-yellow mb-3 text-bg-dark" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-yellow text-yellow-500">DROP PRO TRX</div>
-  <div class="card-body text-yellow text-bg-dark">
+   <div class="card border-#f1c40f mb-3 text-bg-dark" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-#f1c40f text-#f1c40f">DROP PRO TRX</div>
+  <div class="card-body text-#f1c40f text-bg-dark">
     <h5 class="card-title">SOON</h5>
     <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC.</p>
   </div>
-  <button type="button" class="btn btn-outline-yellow">Let's go THERE</button>
+  <button type="button" class="btn btn-outline-#f1c40f">Let's go THERE</button>
 </div>   
 
 <div class="card border-danger mb-3 text-bg-dark" style="max-width: 18rem;">
