--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ background-color: #17202a
   <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
 </div>
 
-   <div class="card border-#f1c40f mb-3 text-bg-dark" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-#f1c40f text-#f1c40f">DROP PRO TRX</div>
+   <div class="card border-$yellow-500 mb-3 text-bg-dark" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-$yellow-500 text-$yellow-500">DROP PRO TRX</div>
   <div class="card-body text-#f1c40f text-bg-dark">
     <h5 class="card-title">SOON</h5>
     <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC.</p>
