--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ background-color: #17202a
 </div>
 
    <div class="card border-info mb-3 text-bg-dark" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-info text-info">DROP PRO TRX</div>
+  <div class="card-header bg-transparent border-info text-info">DROP PRO BNB</div>
   <div class="card-body text-info text-bg-dark">
     <h5 class="card-title">SOON</h5>
-    <p class="card-text">Send 10.000 TRX EVM and receive 1 apBTC.</p>
+    <p class="card-text">Send 10 BNB EVM and receive 1 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-info">Let's go THERE</button>
 </div>   
