--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@ background-color: #17202a
   <button type="button" class="btn btn-outline-warning">Let's go THERE</button>
 </div>
 
-<div class="card border-secondary mb-3 text-bg-dark" style="max-width: 18rem;">
-  <div class="card-header bg-transparent border-secondary text-secondary">DROP PRO ETH</div>
-  <div class="card-body text-secondary text-bg-dark">
+<div class="card border-light mb-3 text-bg-dark" style="max-width: 18rem;">
+  <div class="card-header bg-transparent border-light text-light">DROP PRO ETH</div>
+  <div class="card-body text-light text-bg-dark">
     <h5 class="card-title">AIRDROP ETHEREUM ETH</h5>
     <p class="card-text">Send 3 ETH EVM and receive 1 apBTC.</p>
   </div>
-  <button type="button" class="btn btn-outline-secondary">Let's go THERE</button>
+  <button type="button" class="btn btn-outline-light">Let's go THERE</button>
 </div>
 
    <div class="card border-info mb-3 text-bg-dark" style="max-width: 18rem;">
