--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@ background-color: #17202a
     <div align="center">
     <h4>
       <font color="#5dade2">
-        <a href="">We scale your Crypto, write to us</a>
+        <a href=""><button type="button" class="btn btn-outline-warning">Buy apBtc with fiat</button></a>
+        <a hreg=""><button type="button" class="btn btn-outline-warning">We scale your Crypto, write to us</button></a>
+        
       </font>
     </h4>
 
