--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ background-color: #17202a
     <h4>
       <font color="#5dade2">
         <a href=""><button type="button" class="btn btn-outline-warning">Buy apBtc with fiat</button></a>
-        <a hreg=""><button type="button" class="btn btn-outline-warning">We scale your Crypto, write to us</button></a>
+        <a href=""><button type="button" class="btn btn-outline-warning">We scale your Crypto, write to us</button></a>
         
       </font>
     </h4>
