--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@ background-color: #17202a
       
       <font color="f39c12">
         <img
-    src="images/airdropbtc.png"
+    src="imagen/airdropbtc.jpg"
     alt=""
-    width="400"
-    height="341" />
+    width="200"
+    height="210" />
+        <br />
     <h1>Drop Pro
         We support Crypto scalability</h1>
       </font>
