--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ background-color: #17202a
       
       <font color="f39c12">
         <img
-    src="imagen/airdropbtc.jpg"
+    src="imagen/airdropbtc.png"
     alt=""
-    width="125"
-    height="100" />
+    width="135"
+    height="110" />
         <br />
     <h1>Drop Pro
         We support Crypto scalability</h1>
