--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ background-color: #17202a
     <h5 class="card-title">SOON</h5>
     <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC.</p>
   </div>
-  <button type="button" class="btn btn-outline-warning">Let's go THERE</button>
+  <button type="button" class="btn btn-outline-warning"><a href="index2.html">let's go there</a></button>
 </div>    
     </div>
 
