--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@ background-color: #17202a
 <div class="card border-warning mb-3 text-bg-dark" style="max-width: 18rem;">
   <div class="card-header bg-transparent border-warning text-warning">DROP PRO BTC</div>
   <div class="card-body text-warning text-bg-dark">
-    <h5 class="card-title">SOON</h5>
+    <h5 class="card-title">CONTRACT;<br />
+    0x0000000000<br/>
+    EXPLORER;<br />
+    https://xxxxxxxxx<br/>
+    WALLET; <br />
+    Metamask - TRUST WALLET - APX7</h5>
     <p class="card-text">Send 1 BTC EVM and receive 1.5 apBTC.</p>
   </div>
   <button type="button" class="btn btn-outline-warning"><a href="index2.html">let's go there</a></button>
