--- a/index2.html
+++ b/index2.html
@@ -20,6 +20,8 @@ background-color: #17202a
     width="290"
     height="230" />
         <br />
+        <a href="index.html">HOME</a>
+        <br />
     <h1>Drop Pro
         We support Crypto scalability</h1>
       </font>
